--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
       <div class="circle"></div>
       <header>
-        <a href=""><img src="drink image/logo.PNG" class="logo" /></a>
+        <a href=""><img src="logo.PNG" class="logo" /></a>
         <div class="toggle" onclick="toggleMenu()"></div>
         <ul class="navigation">
           <li><a href="#">Home</a></li>
@@ -53,22 +53,22 @@
             coverflow-effect-slide-shadows="true"
           >
             <swiper-slide>
-              <img src="drink image/IMG_2299.PNG" />
+              <img src="IMG_2299.PNG" />
             </swiper-slide>
             <swiper-slide>
-              <img src="drink image/IMG_2301.PNG" />
+              <img src="IMG_2301.PNG" />
             </swiper-slide>
             <swiper-slide>
-              <img src="drink image/IMG_2302.PNG" />
+              <img src="IMG_2302.PNG" />
             </swiper-slide>
             <swiper-slide>
-              <img src="drink image/IMG_2303.PNG" />
+              <img src="IMG_2303.PNG" />
             </swiper-slide>
             <swiper-slide>
-              <img src="drink image/IMG_2304.PNG" />
+              <img src="IMG_2304.PNG" />
             </swiper-slide>
             <swiper-slide>
-              <img src="drink image/IMG_2305.PNG" />
+              <img src="IMG_2305.PNG" />
             </swiper-slide>
           </swiper-container>
 
@@ -78,17 +78,17 @@
       <ul class="sci">
         <li>
           <a href="https://web.facebook.com/cocacolanigeria/?_rdc=1&_rdr"
-            ><img src="drink image/facebook.PNG" alt=""
+            ><img src="facebook.PNG" alt=""
           /></a>
         </li>
         <li>
           <a href="https://twitter.com/CocaColaCo"
-            ><img src="drink image/twitter.PNG" alt=""
+            ><img src="twitter.PNG" alt=""
           /></a>
         </li>
         <li>
           <a href="https://www.instagram.com/cocacola_ng/"
-            ><img src="drink image/instagram.PNG" alt=""
+            ><img src="instagram.PNG" alt=""
           /></a>
         </li>
       </ul>
